# cookiecutter-my-django

./: .gitignore  LICENSE  Pipfile  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .gitignore  Dockerfile  Pipfile  Procfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
{{ cookiecutter.repo_name }}/backend/: Dockerfile  app.json  manage.py  pyproject.toml
{{ cookiecutter.repo_name }}/backend/api/: urls.py
{{ cookiecutter.repo_name }}/backend/{{ cookiecutter.repo_name }}/: wsgi.py
{{ cookiecutter.repo_name }}/backend/{{ cookiecutter.repo_name }}/settings/: base.py  local.py  production.py  test.py
{{ cookiecutter.repo_name }}/docker/django/: entrypoint.sh  uvicorn.sh
{{ cookiecutter.repo_name }}/requirements/: base.txt  local.txt
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/settings/: base.py
