[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = ""
authors = ["Kuba Zarzycki <jakubzarzycki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = {extras = ["bcrypt", "argon2"], version = "^3.0.2"}
psycopg2-binary = "^2.8.4"
django-environ = "^0.4.5"
django-model-utils = "^4.0.0"
djangorestframework = "^3.11.0"
coreapi = "^2.3.3"
markdown = "^3.1.1"
django-redis = "^4.11.0"
hiredis = "^1.0.1"
channels = "^2.4.0"
uvicorn = "^0.11.1"
gunicorn = "^20.0.4"
django-cors-headers = "^3.2.1"
django-csp = "^3.5"
celery = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^3.7.0"
pytest-mock = "^2.0.0"
pytest-factoryboy = "^2.0.3"
pytest-faker = "^2.0.0"
ipython = "^7.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
